--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body>
+    <h1>wangshuai</h1>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
