--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>疫情平台</title>
+    <title>疫情平坰</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1807470_u1fbqz9xbrf.css">
     <style>
       html,body,#app{
@@ -14,7 +14,6 @@
     </style>
   </head>
   <body>
-    <h1>wangshuai</h1>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
