主页跨域访问

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>疫情平坰</title>
+    <title>Epidemic Platform</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1807470_u1fbqz9xbrf.css">
     <style>
       html,body,#app{
