--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         height: 100%;
         padding: 0px;
         margin: 0px;
+        background-color: #E9EEF3;
       }
     </style>
   </head>
